--- a/public/Index.html
+++ b/public/Index.html
@@ -17,7 +17,7 @@
     <header>
         <!-- Your header content goes here -->
         <div id="logo-box">
-            <img class="logo" src="https://cdn.contactcenterworld.com/images/company/intelcia-1200px-logo.png" alt="Intelcia Logo">
+            <img onclick="window.location.href='Index.html';" class="logo" src="https://cdn.contactcenterworld.com/images/company/intelcia-1200px-logo.png" alt="Intelcia Logo">
         </div>
         
         <!--<h1>Inventory Management System</h1> -->
@@ -57,7 +57,7 @@
             </table>
         </section>
         
-        <button id="add-item-button" onclick="window.location.href='Add Items - IMS.html';">Add New Item</button>
+        <button id="add-item-button" onclick="window.location.href='Add Items - IMS.html';">Add Item</button>
     </main>
     <footer>
         <!-- Your footer content goes here -->
