--- a/public/Update Items.html
+++ b/public/Update Items.html
@@ -6,6 +6,7 @@
     <title>Intelcia Jamaica IMS - Update Item</title>
     <!-- Include your CSS stylesheets and JavaScript files here -->
     <link rel="stylesheet" href="style-IMS.css">
+    <link rel="stylesheet" href="animate.css">
     <!--For FontAwesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style-table.css">
@@ -85,6 +86,14 @@
 
             <input type="submit" value="Submit" id="submit">
          </form>
+         <figure class="success-message">
+            <div class="success-message-body">
+                <i class="far fa-check-circle" id="sm-icon"></i>
+                Item updated successfully!
+            </div>
+            <div class="success-message-progress"></div>
+         </figure>
+        
         
     </main>
     <footer>
